--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <body>
         <div class="container-form">
             <select id="status">
-                <option value="" disabled selected>Selecciona una opción</option>
+                <option value="" selected>Selecciona una opción</option>
                 <option value="dead">Muerto</option>
                 <option value="alive">Vivo</option>
                 <option value="unknown">Desconocido</option>
             </select>
+            <input type="text" id="buscar" placeholder="Buscar personaje">
         </div>
 
         <div class="container">
