--- a/singlecharacter.html
+++ b/singlecharacter.html
@@ -6,12 +6,31 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Rick and Morty API</title>
+        <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+            integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
         <link rel="stylesheet" href="css/styles.css">
     </head>
 
     <body>
         <div class="container">
-            prueba
+            <div class="avatar">
+                <img src="https://rickandmortyapi.com/api/character/avatar/5.jpeg">
+            </div>
+            <div class="info">
+                <h1>Personaje</h1>
+                <h2>Status: alive</h2>
+                <h4>Especie: humano</h4>
+            </div>
+            <div class="episodios">
+                <ul>
+                    <li>Episodio 1</li>
+                    <li>Episodio 1</li>
+                    <li>Episodio 1</li>
+                    <li>Episodio 1</li>
+                    <li>Episodio 1</li>
+                    <li>Episodio 1</li>
+                </ul>
+            </div>
         </div>
         <script src="js/characters.js"></script>
         <script>obtenerParam()</script>
