--- a/singlecharacter.html
+++ b/singlecharacter.html
@@ -12,28 +12,30 @@
     </head>
 
     <body>
-        <div class="container">
-            <div class="avatar">
-                <img src="https://rickandmortyapi.com/api/character/avatar/5.jpeg">
+        <div class="contenido">
+            <div class="container">
+                <div class="avatar">
+                    <img src="https://rickandmortyapi.com/api/character/avatar/5.jpeg">
+                </div>
+                <div class="info">
+                    <h1>Personaje</h1>
+                    <h2>Status: alive</h2>
+                    <h4>Especie: humano</h4>
+                </div>
+                <div class="episodios">
+                    <ul>
+                        <li>Episodio 1</li>
+                        <li>Episodio 1</li>
+                        <li>Episodio 1</li>
+                        <li>Episodio 1</li>
+                        <li>Episodio 1</li>
+                        <li>Episodio 1</li>
+                    </ul>
+                </div>
             </div>
-            <div class="info">
-                <h1>Personaje</h1>
-                <h2>Status: alive</h2>
-                <h4>Especie: humano</h4>
-            </div>
-            <div class="episodios">
-                <ul>
-                    <li>Episodio 1</li>
-                    <li>Episodio 1</li>
-                    <li>Episodio 1</li>
-                    <li>Episodio 1</li>
-                    <li>Episodio 1</li>
-                    <li>Episodio 1</li>
-                </ul>
-            </div>
+            <script src="js/characters.js"></script>
+            <script>obtenerParam()</script>
         </div>
-        <script src="js/characters.js"></script>
-        <script>obtenerParam()</script>
     </body>
 
 </html>
