--- a/index.html
+++ b/index.html
@@ -27,11 +27,16 @@
                     </select>
                     <input type="text" id="buscar" placeholder="Buscar personaje">
                 </div>
+                <div class="paginacion in-grid">
+                    <button id="anterior">Pag. anterior</button>
+                    <button id="siguiente">Pag. siguiente</button>
+                </div>
             </div>
 
             <div class="container">
 
             </div>
+
         </div>
         <script src="js/main.js"></script>
         <script>getAll()</script>
